<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nickvanniekerk.grandfathered.SignupActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_message"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:id="@+id/textView7" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_fill_in_your_information_below_this_information_won_t_be_shared_with_anybody_we_value_your_privacy"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#7f7f7f"
        android:id="@+id/txtEmail"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColor="#000000"
        android:textColorHint="#7f7f7f"
        android:id="@+id/txtPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_your_password"
        android:textColor="#000000"
        android:textColorHint="#7f7f7f"
        android:id="@+id/txtPasswordConfirmation"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/signup_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfirmation" />

</android.support.constraint.ConstraintLayout>
